--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,3 +28,15 @@ body {
 .font-bricolage {
   font-family: var(--font-bricolage), Bricolage Grotesque, sans-serif !important;
 }
+
+@keyframes scaleIn {
+  0% {
+    transform: scale(1.25) rotate(-5deg);
+  }
+  50% {
+    transform: scale(1.25) rotate(5deg);
+  }
+  100% {
+    transform: scale(1) rotate(0deg);
+  }
+}
